--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
   line-height: 1.5;
   height: 100%;
   overflow: hidden;
+  transform: scale(0.85);  /* shrink to 85% */
+  transform-origin: top;
 }
 
 h1 {
@@ -141,6 +143,7 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
+  transform: scale(1.5);      /* match parent scale */
   background-color: rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(0.25px);
   z-index: 5;
